--- a/api/templates/base.html
+++ b/api/templates/base.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>{% block title %}Rishabh Kumar - Personal Portfolio{% endblock %}</title>
+  <title>{% block title %}Rishabh Kumar - Portfolio{% endblock %}</title>
 
   <!--
     - favicon
@@ -201,7 +201,7 @@
   <!--
     - custom js link
   -->
-  <!-- <script src="{{ url_for('static', filename='js/script.js') }}"></script> -->
+  <script src="{{ url_for('static', filename='js/script.js') }}"></script>
 
   <!--
     - ionicon link
