--- a/api/templates/blog.html
+++ b/api/templates/blog.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Blog{% endblock %}
+{% block title %}Blog - Portfolio{% endblock %}
 
 {% block blog %}
 
