--- a/api/templates/resume.html
+++ b/api/templates/resume.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Resume{% endblock %}
+{% block title %}Resume - Portfolio{% endblock %}
 
 {% block resume %}
 
