--- a/api/templates/contact.html
+++ b/api/templates/contact.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Contact{% endblock %}
+{% block title %}Contact - Portfolio{% endblock %}
 
 {% block contact %}
 
