--- a/api/templates/contact.html
+++ b/api/templates/contact.html
@@ -58,7 +58,7 @@
 
       <h3 class="h3 form-title">Contact Form</h3>
 
-      <form action="/contact" method="From" class="form" data-form>
+      <form action="/contact" method="POST" class="form" data-form>
 
         <div class="input-wrapper">
           <input type="text" name="fullname" class="form-input" placeholder="Full name" required data-form-input>
