--- a/api/templates/about.html
+++ b/api/templates/about.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block title %}About - Portfolio{% endblock %}
-
+<meta name="google-site-verification" content="i0hTWePGarsyRsBhO17SbasoCbaEE4OlK9VESBrsj-I" />
 {% block about %}
 
 <!--
