--- a/api/templates/about.html
+++ b/api/templates/about.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}About - Portfolio{% endblock %}
+{% block title %}RISHABH SAHIL - Portfolio{% endblock %}
 <meta name="google-site-verification" content="i0hTWePGarsyRsBhO17SbasoCbaEE4OlK9VESBrsj-I" />
 {% block about %}
 
