--- a/api/templates/blog.html
+++ b/api/templates/blog.html
@@ -56,7 +56,7 @@
         <a href="{{ Blog['Link'] }}">
 
           <figure class="blog-banner-box">
-            <img src="{{ url_for('static', filename=Blog['Image_Link']) }}" alt="{{ Blog['Text'] }}"
+            <img src="{{ url_for('static', filename=Blog['Image_Link']) }}" alt="{{ Blog['Title'] }}"
               loading="lazy">
           </figure>
 
