--- a/api/templates/base.html
+++ b/api/templates/base.html
@@ -6,6 +6,7 @@
   <meta name="google-site-verification" content="i0hTWePGarsyRsBhO17SbasoCbaEE4OlK9VESBrsj-I" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="I am Rishabh Kumar, a Full Stack Developer from Ara, Bihar, India, with over 3 years of experience in software engineering. I have contributed to open-source projects such as the Rishabh Search Engine, A.I Personal Assistant, and WhatsApp A.I Bot ChatGPT Java. My work spans both front-end and back-end development, focusing on creating impactful technology solutions.">
   <title>{% block title %}Rishabh Kumar - Portfolio{% endblock %}</title>
 
   <!--
